# al-huda

./: .dockerignore  .env.example  Dockerfile.backend  Dockerfile.frontend  GEMINI.md  README.md  check_pgvector.py  create_hadist_dataset.py  create_hadist_embeddings.py  create_quran_dataset.py  create_quran_embeddings.py  docker-compose.yml  image_generator.py  main.py  perf_test.py  pyproject.toml  release_locks.py  replacements.txt  search_engine.py  test_hadith_parser.py  verify_fix.py
docs/: API_CONTRACT.md  POSTMAN_COLLECTION.json  UI_UX_DESIGN.md  devlog_25_03_2026.md  devlog_26_03_2026.md  performance_test_report.md
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/hadith/[id]/: page.tsx
frontend/src/app/quran/[id]/: page.tsx
frontend/src/app/search/: page.tsx
frontend/src/components/: ShareModal.tsx
tests/: conftest.py  test_api.py  test_search_engine.py
