[project]
name = "tanya-quran-hadist"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.2",
    "httpx>=0.28.1",
    "pillow>=12.1.1",
    "psutil>=7.2.2",
    "psycopg2-binary>=2.9.11",
    "pytest>=9.0.2",
    "requests>=2.32.5",
    "sentence-transformers>=5.3.0",
    "torch>=2.11.0",
    "tqdm>=4.67.3",
    "uvicorn>=0.42.0",
]
